fix after merge

--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
         }
       });
     </script>
-    <script src="js/bundle.min.js?v=1572262468197"></script>
+    <script src="js/bundle.js"></script>
 </body>
 
 </html>
