--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="preload" as="font" type="font/woff" href="fonts/Cormorant/Cormorant-Regular.woff" crossorigin />
   <link rel="preload" as="font" type="font/woff" href="fonts/Cormorant/Cormorant-Medium.woff" crossorigin />
   <link rel="preload" as="font" type="font/woff" href="fonts/Cormorant/Cormorant-Bold.woff" crossorigin />
-  <link rel="stylesheet" href="css/style.bundle.css?v=1572262468197" />
+  <link rel="stylesheet" href="css/style.bundle.css" />
   <title>Prive7</title>
   <script>
     function statusChangeCallback(response) {
