--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         </div>
         <div class="hero-actions__agreements">
           <label class="check">
-            <input class="check__input" type="checkbox" name="agreements" />
+            <input class="check__input" type="checkbox" name="agreements" checked="true" />
             <span class="check__box"></span>
             <span>Я ознакомлен с <a class="link link--underline" href="#">правилами конкурса </a></span>
           </label>
