--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           </a>
         </div>
         <div class="header__right">
-          <a href="#" class="link header-instagram-link">
+          <a href="https://www.instagram.com/prive7" class="link header-instagram-link">
             <span class="icon icon-instagram"></span>
             <span>Instagram</span>
           </a>
@@ -237,22 +237,22 @@
       <div class="footer__right">
         <ul class="footer-socials-list">
           <li class="footer-socials-list__item">
-            <a href="#" class="link">
+            <a href="https://www.instagram.com/prive7" class="link">
               <span class="icon icon-instagram"></span>
             </a>
           </li>
           <li class="footer-socials-list__item">
-            <a href="#" class="link">
+            <a href="https://www.facebook.com/prive7beauty/" class="link">
               <span class="icon icon-facebook"></span>
             </a>
           </li>
           <li class="footer-socials-list__item">
-            <a href="#" class="link">
+            <a href="https://vk.com/prive7official" class="link">
               <span class="icon icon-vk"></span>
             </a>
           </li>
           <li class="footer-socials-list__item">
-            <a href="#" class="link">
+            <a href="https://www.youtube.com/channel/UCboQQujFoIQ2GFmTeFnwwbA" class="link">
               <span class="icon icon-youtube"></span>
             </a>
           </li>
