--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 </head>
 
 <body>
-  <header class="header">
+  <header class="header" style="height: 100vh;min-height: 500px;">
     <div class="header-wrapper">
       <div class="header__inner page-container">
         <div class="header__left">
