--- a/index.html
+++ b/index.html
@@ -153,10 +153,9 @@
   <main class="main">
     <section class="section section-rating" id="rating">
       <div class="page-container section-rating__container">
-        <h2 class="section-title">Рейтинг специалистов</h2>
+        <h2 class="section-title">Выбор лучших из команды профессионалов</h2>
         <p class="section-subtitle">
-          Рейтинг всеросийского конкурса "PRIVE7&nbsp;Лучшие&nbsp;из&nbsp;лучших" определяется&nbsp;результатами
-          голосования желающих
+          Выберите номинацию и проголосуйте за лучшего, по вашему мнению, специалиста. Напоминаем, что в каждом городе и каждой номинации можно проголосовать 1 раз.
         </p>
         <div class="rating-wrapper">
           <ul class="rating-category-list" style="flex-wrap: wrap;">
